Updated the theme with more refactoring, cleanup.

--- a/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/dockbar.vm
+++ b/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/dockbar.vm
@@ -142,10 +142,11 @@
 </script>
 #if ($is_signed_in)
 <script type="text/javascript">
+    // compile the handlebar templates to be used by Ember
     Ember.TEMPLATES['search'] = Ember.Handlebars.compile('<div class="col-md-5 col-sm-4 search-app"> {{#view SearchApp.SearchFormView}} <div class="input-group"> {{view Ember.TextField id="myhome-search-input" valueBinding="searchText" classNames="form-control" placeholder="Search for articles, conferences and more..."}} <span class="input-group-btn"> <button class="btn btn-primary" type="button" {{action "setUpFullSearch"}}><i class="icon-search"></i></button> </span> </div> {{/view}} </div> <div class="col-md-1 col-sm-1 advanced-search search-app"> <a href="#"  {{action "showAdvancedSearchModal"}}>Advanced</a> </div> <div class="search-results col-md-5 col-sm-5"> <!-- NOTE: 11.25.13 - Keeping typeahead out until future release. <ul> {{#each item in content}} <li> <p{{action "viewContentItem" item}} class="title">{{{item.title}}}</p> <p class="summary">{{{item.summary}}}</p> </li> {{/each}} </ul> --> </div> <div class="modal fade" id="advanced-search-modal"> <div class="modal-dialog advanced-search-modal"> <div class="modal-content"> <div class="modal-header"> <button type="button" class="close square-close" data-dismiss="modal" aria-hidden="true"> <i class="icon-remove"></i> </button> <div class="form-group input-group advanced-search-form"> {{view Ember.TextField id="myhome-advanced-search-input" valueBinding="advancedSearchText" classNames="form-control" placeholder="Search for articles, conferences and more..."}} <span class="input-group-btn"> <button class="btn btn-primary" type="button" {{action "performAdvancedSearch"}}>SEARCH</button> </span> </div> <div class="filters-link-container"> <a id="disable-filters-link" href="#" {{ action "disableFilters"}}> Disable Filters <i class="icon-caret-up icon-fixed-width"></i> </a> <a id="enable-filters-link" href="#" {{ action "enableFilters"}}> Enable Filters <i class="icon-caret-down icon-fixed-width"></i> </a> </div> </div> <div class="advanced-search-filters-container"> <div class="form-group col-md-12 col-sm-12"> Content Types: {{view Ember.Checkbox checkedBinding="filterByArticle"}} Article {{view Ember.Checkbox checkedBinding="filterByWebinar"}} Webinar </div> <div class> <div class="col-md-4 col-sm-4"> <div> <label>From:</label> </div> <div id="advanced-search-dp-start-date" class="input-group col-md-8 col-sm-8"> {{view Ember.TextField id="advanced-search-start-date" valueBinding="advancedSearchStartDate" classNames="form-control datepicker" placeholder="YYYY-MM-DD"}} <span class="input-group-addon"><i class="icon-calendar"></i></span> </div> </div> <div class="col-md-4 col-sm-4"> <div> <label>To:</label> </div> <div id="advanced-search-dp-end-date" class="input-group col-md-8 col-sm-8"> {{view Ember.TextField id="advanced-search-end-date" valueBinding="advancedSearchEndDate" classNames="form-control datepicker" placeholder="YYYY-MM-DD"}} <span class="input-group-addon"><i class="icon-calendar"></i></span> </div> </div> </div> </div> <div> <div class="advanced-result-count-container"> <h6>{{numberOfAdvancedResults}} RESULTS FOUND</h6> </div> <div class="advanced-search-results"> {{#each item in controller.paginatedContent}} <div class="advanced-search-result"> {{#unless item.isNoResult}} <span {{bindAttr class=":label :label-info item.hasFullAccess::hide"}}>Full Access</span>&nbsp; <span {{bindAttr class=":label :label-info item.contentType"}}>{{item.contentType}}</span> {{/unless}} <h5><a href="#" {{action "viewContentItem" item}}>{{{item.title}}}</a></h5> <p class="summary">{{{item.summary}}}</p> <div {{ bindAttr class=":alert :alert-block :alert-success :fade :hide item.confirmId :success" }}> <button type="button" class="close" aria-hidden="true" {{ action "hideAddBundleSuccess" item.confirmId }}>x</button> <h4><i class="icon-check-sign icon-3x icon-fixed-width"></i>Added To Bundle!</h4> </div> <div {{ bindAttr class=":alert :alert-block :alert-danger :fade :hide item.confirmId :error" }}> <button type="button" class="close" aria-hidden="true" {{ action "hideAddBundleError" item.confirmId}}>x</button> {{#unless bundleLimitError}} <p> <i class="icon-warning-sign icon-3x icon-fixed-width"></i> Your bundle is at its limit, would you like to increase the size? <a class="btn btn-default" href="#" {{ action "goToBundlePurchase" item }}>Make it happen</a> </p> {{else}} <h4><i class="icon-exclamation-sign icon-3x icon-fixed-width"></i>There was a problem adding this item to your bundle, please try again or contact help@computer.org.</h4> {{/unless}} </div> <div {{ bindAttr class=":alert :alert-block :alert-warning :fade :hide item.confirmId :warning" }}> <button type="button" class="close" aria-hidden="true"  {{ action "hideAddBundleConfirm" item.confirmId }}>x</button> <p> <i class="icon-warning-sign icon-3x icon-fixed-width"></i> Are you sure you would like to add this item to your bundle? <button {{bindAttr class=":btn :btn-default item.isSavingToBundle:disabled"}} {{ action "addItemToBundle" item item.confirmId}} > {{#unless item.isSavingToBundle }} Yes {{else}} Please Wait {{/unless}} </button> </p> </div> {{#unless item.isNoResult}} <a href="#" {{ bindAttr class=":btn :btn-info :btn-xs item.hasFullAccess:hide item.canManuallyAddToBundle::hide"}} {{ action "showAddBundleConfirm" item.confirmId }}>Add To Bundle</a> {{/unless}} </div> {{/each}} </div> {{#unless noResultsFound}} <div class="advanced-search-pagination"> <ul class="pagination pagination-sm"> {{#unless hasPrevPage}} <li class="disabled"><a href="#">&laquo;</a></li> {{else}} <li>{{#linkTo "search.page" prevPage target="controller"}}&laquo;{{/linkTo}}</li> {{/unless}} {{#each pages}} {{view SearchApp.PaginationView contentBinding="this"}} {{/each}} {{#unless hasNextPage}} <li class="disabled"><a href="#">&raquo;</a></li> {{else}} <li>{{#linkTo "search.page" nextPage target="controller"}}&raquo;{{/linkTo}}</li> {{/unless}} </ul> </div> {{/unless}} </div> </div> </div> </div>');
     Ember.TEMPLATES['pagination'] = Ember.Handlebars.compile('{{#with view}}{{#linkTo "search.page" page}}{{content.page_id}}{{/linkTo}}{{/with}}');
 
-    /*
+    /**
      * This is the search application initialization.  We are attaching it
      * to a specific dom element.
      */
@@ -153,7 +154,7 @@
         rootElement: '#myhome-search-container'
     });
 
-    /*
+    /**
      *  We specify the root index route for this application.
      *  We force the index to use the "search" template.
      */
@@ -177,7 +178,7 @@
      });
 
 
-    /*
+    /**
      * This is the main model for search results.
      */
     SearchApp.Content = Ember.Object.extend({
@@ -204,7 +205,7 @@
         }.property('itemId')
     });
 
-    /*
+    /**
      * This is the pagination mixin.  This is needed because Ember doesn't have a
      * pagination module in its core as of today [10.08.13].
      */
@@ -261,7 +262,7 @@
         }.property('selectedPage', 'advancedContent.@each')
     });
 
-    /*
+    /**
      * This is the controller for the search app, that will handle
      *  all the application's actions.
      */
@@ -286,12 +287,12 @@
             return this.get('numberOfAdvancedResults') == 0;
         }.property('numberOfAdvancedResults'),
 
-        /*
+        /**
          * This function will use the user's purchase information to determine
          * what webinar skus are expired from within their bundle.  This is needed
          * so that user's do not have access to bundle items that are expired.
-         * @param userPurchaseData
-         * @return list of expired skus
+         * @param Object userPurchaseData
+         * @return Array list of expired skus
          */
         getExpiredSkus: function(userPurchaseData) {
             var retVal = [];
@@ -312,7 +313,7 @@
             return retVal;
         },
 
-        /*
+        /**
          * This function will user the user's purchase information to determine
          * if they have any free slots in their specific bundle.  Usually this
          * function will be called when a user is adding items to their bundle.
@@ -352,7 +353,7 @@
             return userContentCount < totalBundleCount;
         },
 
-        /*
+        /**
          * This function observes the searchText property on this
          * controller.  Whenever that property changes,
          * this function is called.  It will then call the search function
@@ -373,7 +374,7 @@
             // }
         }.observes('searchText'),
 
-        /*
+        /**
          * This function will handle the main searching functionality of the application.
          * It will search the Elastic Search server, and set the results on the controller.
          * There are two types of search the user can perform, a basic search and an
@@ -623,13 +624,13 @@
             });
         },
 
-        /*
+        /**
          * This is the required actions object that Ember wants you put
          * your functions that handle actions from Handlebars templates.
          */
         actions: {
 
-            /*
+            /**
              * Just in case we need to hide the search bar,
              * this is useful for pages that are public i.e. landing/purchase
              */
@@ -637,7 +638,7 @@
                jQuery('.search-app').hide();
             },
 
-            /*
+            /**
              * This function sets the user purchase data on the controller
              * @param Object data - the user purchase data
              */
@@ -645,7 +646,7 @@
                 this.set('userPurchaseData', data);
             },
 
-            /*
+            /**
              * This function will serve as the process to display to the
              * user that their selected item was in fact successfully/unsuccessfully
              * added to their bundle.
@@ -683,7 +684,7 @@
                 }
             },
 
-            /*
+            /**
              * This function will facilitate the adding of an item to the user's
              * bundle.  It will take the item and send it off (via Ember's instruments) to the
              * Account Ember Application, which will then update the user's bundle on the backend.
@@ -753,7 +754,7 @@
                 jQuery('.advanced-search-filters-container').show();
             },
 
-            /*
+            /**
              * This function will perform all the necessary initializations/resets
              * to prepare the UI for a search performed by the user.
              */
@@ -775,7 +776,7 @@
                 jQuery("#advanced-search-modal").modal("show");
             },
 
-            /*
+            /**
              * This function will initiate a basic search
              */
             performSearch: function() {
@@ -787,7 +788,7 @@
                 }
             },
 
-            /*
+            /**
              * This function will initiate an advanced search
              */
             performAdvancedSearch: function() {
@@ -804,7 +805,7 @@
                 }
             },
 
-            /*
+            /**
              * This function will navigate to the view content page to
              * display the specific item.
              * @param Object item - the content item to view
@@ -821,7 +822,7 @@
                 }
             },
 
-            /*
+            /**
              * This function will navigate the user to the purchase page.
              * Depending on the type of item they are looking for, the query
              * string for the purchase page is built.
@@ -843,7 +844,7 @@
     // for the initial index view
     SearchApp.SearchRoute = Ember.Route.extend({
 
-        /*
+        /**
          * This is a standard function of Ember to initialize the controller.
          * Here we are creating the Ember subscriptions to certain channels.
          * @param Ember.Controller controller
