--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
@@ -57,7 +57,7 @@ em { font-weight: bold; }
 /* =========================================================
     Content Type Styles
 =========================================================*/
-.article { background-color: #e67e22 !important;  }
+.article { background-color: #004d85 !important;  }
 .webinar { background-color: #16a085 !important; }
 .readynote { background-color: #9b59b6 !important; }
 .essentialset { background-color: #7f8c8d !important; }
