--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
@@ -290,3 +290,13 @@ ul {
 	margin: 0em;
 	margin-left: 0em;
 }
+
+.portlet-msg-error {
+    background: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
