--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/init_custom.vm
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/init_custom.vm
@@ -3,3 +3,39 @@ This file allows you to override and define new Velocity variables.
 *#
 #set ($elasticSearchURL = $propsUtil.get("ieee.cs.elastic.search.url"))
 #set($currentPageURL = $community_default_url.split("[?]").get(0))
+
+#* --------------------------------------------
+Determine if this user is a member
+of the current Group.
+------------------------------------------------ *#
+#set($userLocalService = $serviceLocator.findService("com.liferay.portal.service.UserLocalService"))
+#set($isMemberOfGroup = $userLocalService.hasGroupUser($group_id, $user_id) )
+
+#* --------------------------------------------
+Determine the "community" roles
+for this user.
+------------------------------------------------ *#
+#set($isLiferayAdmin = $permissionChecker.isCompanyAdmin($company_id))
+#set($isCommunityOwner = false)
+#set($isCommunityAdministrator = false)
+#set($isCommunityControlPanel = false)
+#set($isCommunityEditor = false)
+
+#if ( $is_signed_in && $isMemberOfGroup )
+
+#set ($roleLocalService = $serviceLocator.findService("com.liferay.portal.service.RoleLocalService"))
+#set ($userGroupRoles = $roleLocalService.getUserGroupRoles( $user_id, $group_id ))
+
+#foreach( $userGroupRole in $userGroupRoles )
+#if ( $userGroupRole.getName() == "Community Owner" )
+#set($isCommunityOwner = true)
+#elseif ( $userGroupRole.getName() == "Community Administrator" )
+#set($isCommunityAdministrator = true)
+#elseif ( $userGroupRole.getName() == "Community ControlPanel" )
+#set($isCommunityControlPanel = true)
+#elseif ( $userGroupRole.getName() == "Community Editor" )
+#set($isCommunityEditor = true)
+#end
+#end
+#end
+
