--- a/trunk/themes/ieeecs-HomePageSplash-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/trunk/themes/ieeecs-HomePageSplash-theme/docroot/_diffs/templates/portal_normal.vm
@@ -522,7 +522,7 @@
                                 <a href="https://twitter.com/share" class="twitter-share-button" data-related="ComputerSociety" data-hashtags="digitallibrary">Tweet</a>
                                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                             </li>
-                            <li>
+                            <li class="hide">
                                 <div class="fb-like" data-href="http://myhome.computer.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                             </li>
                             <li>
