--- a/themes/ieeecs-HomePageSplash-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/themes/ieeecs-HomePageSplash-theme/docroot/_diffs/templates/portal_normal.vm
@@ -523,11 +523,11 @@
                                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                             </li>
                             <li class="hide">
-                                <div class="fb-like" data-href="http://myhome.computer.org" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+                                <div class="fb-like" data-href="http://myhome.computer.org/portal/web/myhome/splash" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                             </li>
                             <li>
                                 <script type="text/javascript" src="https://apis.google.com/js/platform.js"></script>
-                                <div class="g-plusone" data-size="medium" data-href="http://www.computer.org/portal/web/myhome/splash"></div>
+                                <div class="g-plusone" data-size="medium" data-href="http://myhome.computer.org/portal/web/myhome/splash"></div>
                             </li>
                         </ul>
                     </div>
