more updates from the demo feedback.

--- a/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
+++ b/themes/ieeecs-HomePage-theme/docroot/_diffs/css/custom.css
@@ -57,8 +57,8 @@ em { font-weight: bold; }
 /* =========================================================
     Content Type Styles
 =========================================================*/
-.article { background-color: #004d85 !important;  }
-.webinar { background-color: #16a085 !important; }
+.article { background-color: #2980b9 !important;  }
+.webinar { background-color: #27ae60 !important; }
 .readynote { background-color: #9b59b6 !important; }
 .essentialset { background-color: #7f8c8d !important; }
 .group { background-color: #34495e !important; }
