--- a/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/search.hbs
+++ b/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/search.hbs
@@ -1,4 +1,4 @@
-    <div class="col-md-5 col-sm-4 search-app">
+    <div class="col-md-5 col-sm-4 search-app onboarding-help" data-trigger="manual" data-toggle="popover" data-placement="bottom" data-content="View and add content by searching using keyword(s).">
         {{#view SearchApp.SearchFormView}}
         <div class="input-group">
             {{view Ember.TextField id="myhome-search-input" valueBinding="searchText" classNames="form-control" placeholder="Search for articles, conferences and more..."}}
