Updates that came out of the demo.

--- a/portlets/ieeecs-HomepageAbout-portlet/docroot/WEB-INF/templates/about.webinar.hbs
+++ b/portlets/ieeecs-HomepageAbout-portlet/docroot/WEB-INF/templates/about.webinar.hbs
@@ -24,7 +24,7 @@
                 Come up with a customizable program that works for you.
             </li>
         </ul>
-        <p><button {{action "purchaseBundle" }} class="btn btn-block btn-primary btn-lg">Try out a webinar now.</button></p>
+        <p><button {{action "purchaseBundle" }} class="btn btn-block btn-primary btn-lg">Request Webinar Bundle Quote</button></p>
     </div> <!-- /.about-top-content -->
 </div>
 <div class="about-mid-container well col-xs-12">
@@ -215,7 +215,7 @@
     <a href="/portal/web/myhome/webinar-bundle">Webinars</a>
     <a href="http://www.ieee.org/site_terms_conditions.html?WT.mc_id=hpf_terms">Terms</a>
     <a href="http://www.computer.org/portal/web/guest/privacy">Privacy</a>
-    <a href="#top">Top</a>
+    <a href="/portal/web/myhome/help">Help</a>
 </div>
 <div class="row about-footer-social-links">
     <a href="mailto:help@computer.org"><i class="icon-envelope icon-2x"></i></a>
