--- a/portlets/ieeecs-HomepagePurchase-portlet/docroot/WEB-INF/templates/purchase.hbs
+++ b/portlets/ieeecs-HomepagePurchase-portlet/docroot/WEB-INF/templates/purchase.hbs
@@ -3,7 +3,7 @@
         <h3>Request A Quote</h3>
         <p>
             <i class="icon-info-sign icon-fixed-width"></i>
-            <small>Please complete the form below to request a bundle.</small>
+            Please complete the form below to request a content bundle.  A representative will then contact you with more information on the details of your bundle request.
         </p>
     </div>
     <div id="success-alert-${id}" class="alert alert-block alert-success fade hide">
@@ -67,7 +67,7 @@
     <a href="/portal/web/myhome/webinar-bundle">Webinars</a>
     <a href="http://www.ieee.org/site_terms_conditions.html?WT.mc_id=hpf_terms">Terms</a>
     <a href="http://www.computer.org/portal/web/guest/privacy">Privacy</a>
-    <a href="#top">Top</a>
+    <a href="/portal/web/myhome/help">Help</a>
 </div>
 <div class="row footer-social-links">
     <a href="mailto:help@computer.org"><i class="icon-envelope icon-2x"></i></a>
