--- a/portlets/ieeecs-HomepageSubscriptionContentList-portlet/docroot/WEB-INF/templates/list.hbs
+++ b/portlets/ieeecs-HomepageSubscriptionContentList-portlet/docroot/WEB-INF/templates/list.hbs
@@ -1,4 +1,4 @@
-<div class="content-list-search-bar">
+<div class="content-list-search-bar onboarding-help" data-trigger="manual" data-container="body" data-toggle="popover" data-placement="top" data-content="Your content will be shown here.  For large lists, you can filter your content by the title, description, or content type.">
     <div class="col-md-8 col-sm-8">
         <span>Your Library Content</span>
     </div>
