--- a/portlets/ieeecs-HomepageSuggestedCompany-portlet/docroot/WEB-INF/templates/companies.hbs
+++ b/portlets/ieeecs-HomepageSuggestedCompany-portlet/docroot/WEB-INF/templates/companies.hbs
@@ -1,5 +1,5 @@
 <c:if test="${canInlineEdit}">
-    <span id="edit-suggested-companies-${id}" class="label label-default"><a class="inline-edit" {{action "editSugggestedCompanies"}}><i class="icon-edit-sign"></i>&nbsp;Edit</a></span>
+    <span id="edit-suggested-companies-${id}" class="label label-danger"><a class="inline-edit" {{action "editSugggestedCompanies"}}><i class="icon-edit-sign"></i>&nbsp;Edit</a></span>
 </c:if>
 <div class="suggested-company-header">
     <a class="text-muted pull-right hide" href="#">View all</a>
